vfpl_lexer/src/snapshots/vfpl_lexer__test__decimal_with_leading_zeros.snap
---
source: vfpl_lexer/src/test.rs
expression: "lex(\"000001.15\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 9,
            },
            kind: Float(
                1.15,
            ),
        },
        Token {
            span: Span {
                start: 18446744073709551615,
                end: 18446744073709551615,
            },
            kind: Eof,
        },
    ],
)
