vfpl_lexer/src/snapshots/vfpl_lexer__test__minus_with_leading_zeros.snap
---
source: vfpl_lexer/src/test.rs
expression: "lex(\"-0000012\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 8,
            },
            kind: Int(
                -12,
            ),
        },
        Token {
            span: Span {
                start: 18446744073709551615,
                end: 18446744073709551615,
            },
            kind: Eof,
        },
    ],
)
